// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea component should match snapshots 1`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.c0.c0 {
  display: block;
  resize: auto;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

<div
  class="FieldGroup-module__field-group___H0qA5"
>
  <textarea
    class="TextInput-module__text-input___VCylJ c0"
    id="textarea-0"
    placeholder=""
  />
</div>
`;

exports[`TextArea component should match snapshots 2`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.TextInput-module__has-default-value___o7STi {
  background-color: var(--qtm-colors-primary-100);
}

.c0.c0 {
  display: block;
  resize: auto;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

<div
  class="FieldGroup-module__field-group___H0qA5"
>
  <textarea
    class="TextInput-module__text-input___VCylJ TextInput-module__has-default-value___o7STi c0"
    id="textarea-1"
    placeholder=""
  >
    foo
  </textarea>
</div>
`;

exports[`TextArea component should match snapshots 3`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.InputLabel-module__input-label___u-ovg {
  color: inherit;
  display: block;
  font-weight: 700;
  margin: var(--qtm-spacing-xsmall) 0 0;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.c0.c0 {
  display: block;
  resize: auto;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

<div
  class="FieldGroup-module__field-group___H0qA5"
>
  <label
    class="InputLabel-module__input-label___u-ovg"
    for="textarea-2"
  >
    Text label
  </label>
  <textarea
    class="TextInput-module__text-input___VCylJ c0"
    id="textarea-2"
    placeholder=""
  />
</div>
`;

exports[`TextArea component should match snapshots 4`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.InputLabel-module__input-label___u-ovg {
  color: inherit;
  display: block;
  font-weight: 700;
  margin: var(--qtm-spacing-xsmall) 0 0;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.c0 {
  color: #ec584e;
}

.c1.c1 {
  display: block;
  resize: auto;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

<div
  class="FieldGroup-module__field-group___H0qA5"
>
  <label
    class="InputLabel-module__input-label___u-ovg"
    for="textarea-3"
  >
    Text label
    <em
      class="c0"
    >
      *
    </em>
  </label>
  <textarea
    class="TextInput-module__text-input___VCylJ c1"
    id="textarea-3"
    placeholder=""
    required=""
  />
</div>
`;

exports[`TextArea component should match snapshots 5`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.c0.c0 {
  display: block;
  resize: auto;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

<div
  class="FieldGroup-module__field-group___H0qA5"
>
  <textarea
    class="TextInput-module__text-input___VCylJ c0"
    disabled=""
    id="textarea-4"
    placeholder=""
  />
</div>
`;

exports[`TextArea component should match snapshots 6`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.c0.c0 {
  display: block;
  resize: auto;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

<div
  class="FieldGroup-module__field-group___H0qA5"
>
  <textarea
    class="TextInput-module__text-input___VCylJ c0"
    id="textarea-5"
    placeholder="this input has a placeholder"
  />
</div>
`;

exports[`TextArea component should match snapshots 7`] = `
.ErrorMessage-module__error-message___MWbU- {
  color: var(--qtm-colors-error-900);
  cursor: text;
  display: block;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
  line-height: normal;
  margin-top: var(--qtm-spacing-xsmall);
}

.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.HelperText-module__helper-text___e4Vp- {
  color: inherit!important;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.c0.c0 {
  display: block;
  resize: auto;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

<div
  class="FieldGroup-module__field-group___H0qA5"
>
  <textarea
    class="TextInput-module__text-input___VCylJ c0"
    id="textarea-6"
    placeholder=""
  />
  <span
    class="ErrorMessage-module__error-message___MWbU- HelperText-module__helper-text___e4Vp-"
  >
    this is a helper text
  </span>
</div>
`;

exports[`TextArea component should match snapshots 8`] = `
.ErrorMessage-module__error-message___MWbU- {
  color: var(--qtm-colors-error-900);
  cursor: text;
  display: block;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
  line-height: normal;
  margin-top: var(--qtm-spacing-xsmall);
}

.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.TextInput-module__error___nPcHX,
.TextInput-module__error___nPcHX:focus,
.TextInput-module__error___nPcHX:hover {
  border-color: var(--qtm-colors-error-700);
}

.c0.c0 {
  display: block;
  resize: auto;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

<div
  class="FieldGroup-module__field-group___H0qA5"
>
  <textarea
    class="TextInput-module__text-input___VCylJ TextInput-module__error___nPcHX c0"
    id="textarea-7"
    placeholder=""
  />
  <span
    class="ErrorMessage-module__error-message___MWbU-"
  >
    Error message
  </span>
</div>
`;

exports[`TextArea component should match snapshots 9`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.FieldGroup-module__field-group-dark___E0Qz5 {
  color: var(--qtm-colors-neutral-0);
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.TextInput-module__text-input-dark___TrWzt {
  background-color: rgba(0,0,0,.7)!important;
  border: 2px solid transparent;
  color: var(--qtm-colors-neutral-0);
}

.c0.c0 {
  display: block;
  resize: auto;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

<div
  class="FieldGroup-module__field-group___H0qA5 FieldGroup-module__field-group-dark___E0Qz5"
>
  <textarea
    class="TextInput-module__text-input___VCylJ TextInput-module__text-input-dark___TrWzt c0"
    id="textarea-8"
    placeholder=""
  />
</div>
`;

exports[`TextArea component should match snapshots 10`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.FieldGroup-module__field-group-dark___E0Qz5 {
  color: var(--qtm-colors-neutral-0);
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.TextInput-module__text-input-dark___TrWzt {
  background-color: rgba(0,0,0,.7)!important;
  border: 2px solid transparent;
  color: var(--qtm-colors-neutral-0);
}

.TextInput-module__has-default-value___o7STi {
  background-color: var(--qtm-colors-primary-100);
}

.c0.c0 {
  display: block;
  resize: auto;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

<div
  class="FieldGroup-module__field-group___H0qA5 FieldGroup-module__field-group-dark___E0Qz5"
>
  <textarea
    class="TextInput-module__text-input___VCylJ TextInput-module__has-default-value___o7STi TextInput-module__text-input-dark___TrWzt c0"
    id="textarea-9"
    placeholder=""
  >
    foo
  </textarea>
</div>
`;

exports[`TextArea component should match snapshots 11`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.FieldGroup-module__field-group-dark___E0Qz5 {
  color: var(--qtm-colors-neutral-0);
}

.InputLabel-module__input-label___u-ovg {
  color: inherit;
  display: block;
  font-weight: 700;
  margin: var(--qtm-spacing-xsmall) 0 0;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.TextInput-module__text-input-dark___TrWzt {
  background-color: rgba(0,0,0,.7)!important;
  border: 2px solid transparent;
  color: var(--qtm-colors-neutral-0);
}

.c0.c0 {
  display: block;
  resize: auto;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

<div
  class="FieldGroup-module__field-group___H0qA5 FieldGroup-module__field-group-dark___E0Qz5"
>
  <label
    class="InputLabel-module__input-label___u-ovg"
    for="textarea-10"
  >
    Text label
  </label>
  <textarea
    class="TextInput-module__text-input___VCylJ TextInput-module__text-input-dark___TrWzt c0"
    id="textarea-10"
    placeholder=""
  />
</div>
`;

exports[`TextArea component should match snapshots 12`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.FieldGroup-module__field-group-dark___E0Qz5 {
  color: var(--qtm-colors-neutral-0);
}

.InputLabel-module__input-label___u-ovg {
  color: inherit;
  display: block;
  font-weight: 700;
  margin: var(--qtm-spacing-xsmall) 0 0;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.TextInput-module__text-input-dark___TrWzt {
  background-color: rgba(0,0,0,.7)!important;
  border: 2px solid transparent;
  color: var(--qtm-colors-neutral-0);
}

.c0 {
  color: inherit;
}

.c1.c1 {
  display: block;
  resize: auto;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

<div
  class="FieldGroup-module__field-group___H0qA5 FieldGroup-module__field-group-dark___E0Qz5"
>
  <label
    class="InputLabel-module__input-label___u-ovg"
    for="textarea-11"
  >
    Text label
    <em
      class="c0"
    >
      *
    </em>
  </label>
  <textarea
    class="TextInput-module__text-input___VCylJ TextInput-module__text-input-dark___TrWzt c1"
    id="textarea-11"
    placeholder=""
    required=""
  />
</div>
`;

exports[`TextArea component should match snapshots 13`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.FieldGroup-module__field-group-dark___E0Qz5 {
  color: var(--qtm-colors-neutral-0);
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.TextInput-module__text-input-dark___TrWzt {
  background-color: rgba(0,0,0,.7)!important;
  border: 2px solid transparent;
  color: var(--qtm-colors-neutral-0);
}

.c0.c0 {
  display: block;
  resize: auto;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

<div
  class="FieldGroup-module__field-group___H0qA5 FieldGroup-module__field-group-dark___E0Qz5"
>
  <textarea
    class="TextInput-module__text-input___VCylJ TextInput-module__text-input-dark___TrWzt c0"
    disabled=""
    id="textarea-12"
    placeholder=""
  />
</div>
`;

exports[`TextArea component should match snapshots 14`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.FieldGroup-module__field-group-dark___E0Qz5 {
  color: var(--qtm-colors-neutral-0);
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.TextInput-module__text-input-dark___TrWzt {
  background-color: rgba(0,0,0,.7)!important;
  border: 2px solid transparent;
  color: var(--qtm-colors-neutral-0);
}

.c0.c0 {
  display: block;
  resize: auto;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

<div
  class="FieldGroup-module__field-group___H0qA5 FieldGroup-module__field-group-dark___E0Qz5"
>
  <textarea
    class="TextInput-module__text-input___VCylJ TextInput-module__text-input-dark___TrWzt c0"
    id="textarea-13"
    placeholder="this input has a placeholder"
  />
</div>
`;

exports[`TextArea component should match snapshots 15`] = `
.ErrorMessage-module__error-message___MWbU- {
  color: var(--qtm-colors-error-900);
  cursor: text;
  display: block;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
  line-height: normal;
  margin-top: var(--qtm-spacing-xsmall);
}

.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.FieldGroup-module__field-group-dark___E0Qz5 {
  color: var(--qtm-colors-neutral-0);
}

.HelperText-module__helper-text___e4Vp- {
  color: inherit!important;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.TextInput-module__text-input-dark___TrWzt {
  background-color: rgba(0,0,0,.7)!important;
  border: 2px solid transparent;
  color: var(--qtm-colors-neutral-0);
}

.c0.c0 {
  display: block;
  resize: auto;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

<div
  class="FieldGroup-module__field-group___H0qA5 FieldGroup-module__field-group-dark___E0Qz5"
>
  <textarea
    class="TextInput-module__text-input___VCylJ TextInput-module__text-input-dark___TrWzt c0"
    id="textarea-14"
    placeholder=""
  />
  <span
    class="ErrorMessage-module__error-message___MWbU- HelperText-module__helper-text___e4Vp-"
  >
    this is a helper text
  </span>
</div>
`;

exports[`TextArea component should match snapshots 16`] = `
.ErrorMessage-module__error-message___MWbU- {
  color: var(--qtm-colors-error-900);
  cursor: text;
  display: block;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
  line-height: normal;
  margin-top: var(--qtm-spacing-xsmall);
}

.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.FieldGroup-module__field-group-dark___E0Qz5 {
  color: var(--qtm-colors-neutral-0);
}

.InputErrorMessage-module__error-message-dark___CbNlK {
  color: var(--qtm-colors-neutral-0)!important;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.TextInput-module__text-input-dark___TrWzt {
  background-color: rgba(0,0,0,.7)!important;
  border: 2px solid transparent;
  color: var(--qtm-colors-neutral-0);
}

.TextInput-module__error___nPcHX,
.TextInput-module__error___nPcHX:focus,
.TextInput-module__error___nPcHX:hover {
  border-color: var(--qtm-colors-error-700);
}

.TextInput-module__error-dark___FPgjH {
  border-color: var(--qtm-colors-neutral-0);
}

.c0.c0 {
  display: block;
  resize: auto;
  min-height: 108px;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

<div
  class="FieldGroup-module__field-group___H0qA5 FieldGroup-module__field-group-dark___E0Qz5"
>
  <textarea
    class="TextInput-module__text-input___VCylJ TextInput-module__error___nPcHX TextInput-module__text-input-dark___TrWzt TextInput-module__error-dark___FPgjH c0"
    id="textarea-15"
    placeholder=""
  />
  <span
    class="ErrorMessage-module__error-message___MWbU- InputErrorMessage-module__error-message-dark___CbNlK"
  >
    Error message
  </span>
</div>
`;

exports[`TextArea component should match snapshots 17`] = `
.FieldGroup-module__field-group___H0qA5 {
  color: var(--qtm-colors-neutral-700);
  margin-bottom: 20px;
  min-width: 250px;
  position: relative;
  width: 100%;
}

.TextInput-module__text-input___VCylJ {
  -webkit-appearance: none;
  background-color: var(--qtm-colors-neutral-0);
  border: 2px solid var(--qtm-colors-neutral-500);
  border-radius: 4px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  font-size: medium;
  letter-spacing: .2px;
  margin-top: 0;
  outline: none;
  padding: var(--qtm-spacing-xsmall) var(--qtm-spacing-medium);
  transition: all .2s ease-in-out;
  width: 100%;
}

.c0.c0 {
  display: block;
  resize: none;
  min-height: inherit;
  margin-top: 8px;
  -webkit-transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
  transition: border 0.2s ease-in-out,box-shadow 0.2s ease-in-out;
}

<div
  class="FieldGroup-module__field-group___H0qA5"
>
  <textarea
    class="TextInput-module__text-input___VCylJ c0"
    id="textarea-16"
    placeholder=""
    rows="1"
  />
</div>
`;
